hsmc-macros/tests/ui/t10_1_during_duplicate_field.stderr
error: field `a` listed twice in `during: tick(...)` — each field can only be borrowed once per during
  --> tests/ui/t10_1_during_duplicate_field.rs:19:25
   |
19 |         during: tick(a, a);
   |                         ^
